--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
 <div class="container">
   <h1>QR Code Generator</h1>
   
-  <!-- Input field for URL -->
+  
   <input type="text" id="urlInput" placeholder="Enter URL here">
   
-  <!-- Button to generate the QR code -->
+  
   <button onclick="generateQRCode()">Generate QR Code</button>
   
-  <!-- This will hold the generated QR code -->
+  
   <div id="qrcode"></div>
 </div>
 
-<!-- Include the QR code library -->
+
 <script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
 
 
-<script src="script.js"></script> <!-- Link to the JavaScript file -->
+<script src="script.js"></script> 
 
 </body>
 </html>
